--- a/packages/admin/package.json
+++ b/packages/admin/package.json
@@ -17,7 +17,8 @@
   },
   "files": [
     "src/",
-    "dist/"
+    "dist/",
+    "types/"
   ],
   "scripts": {
     "build": "vite build",
@@ -63,8 +64,9 @@
     "@ditojs/build": "^1.8.0",
     "pug": "^3.0.2",
     "sass": "1.53.0",
-    "type-fest": "^1.1.3",
+    "type-fest": "^2.16.0",
     "vite": "^2.9.14",
     "vite-plugin-vue2": "^2.0.1"
-  }
+  },
+  "types": "types"
 }
