--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -8,7 +8,8 @@
   "license": "MIT",
   "main": "./src/index.js",
   "files": [
-    "src/"
+    "src/",
+    "types/"
   ],
   "scripts": {
     "types": "tsc --esModuleInterop --noEmit ./types/index.d.ts"
@@ -81,6 +82,7 @@
   "devDependencies": {
     "knex": "^2.1.0",
     "objection": "^3.0.1",
-    "type-fest": "^1.1.3"
-  }
+    "type-fest": "^2.16.0"
+  },
+  "types": "types"
 }
